<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Master Key multi-fix</string>
    <string name="about_title">Επιδιόρθωση προβλημάτων του Android</string>
    <string name="about_author">Από <a href="mailto:Tungstwenty@gmail.com">Tungstwenty</a> @ <a href="http://forum.xda-developers.com/member.php?u=4322181">XDA Developers</a></string>
    <string name="about_description">Αυτό το patch επιδιορθώνει μερικά προβλήματα (bugs) του Android που συγκεντρωμένα είναι γνωστά σαν \'Master Key\' exploits:
\n- \'bug 8219321\'
\n- \'bug 9695860\'
\n- \'bug 9950697\'
\n- και μερικές επιπλέον επιδιορθώσεις από το Android 4.4
\n
\nΣε γενικές γραμμές, αυτά επιτρέπουν την <b>επεξεργασία υπογεγραμμένων APKs<b> αλλάζοντας τον κώδικά τους ενώ η υπάρχουσα υπογραφή παραμένει ενεργή (εξού και ο όρος \'Master Key\'), κάνοντάς σας να νομίζετε ότι ο δημιουργός της εφαρμογής είναι κάποιος που εμπιστεύεστε.
\nΟι αρχικές πηγές του Android περιέχουν επιδιορθώσεις για αυτά τα προβλήματα, αλλά μπορεί να πάρει καιρό
μέχρι οι stock ROMs να έχουν τις επιδιορθώσεις, αν ποτέ.
\n
\nΓια ερωτήσεις, παρακαλώ επισκεφτείτε <a href="http://forum.xda-developers.com/showthread.php?t=2365294">αυτό το θέμα</a>.</string>
    <string name="about_noconfigs">Αυτή η εφαρμογή δεν έχει ρυθμίσεις.
Είναι ένα Xposed module που πρέπει να είναι ενεργοποιημένο στο framework manager για να έχει αποτελέσματα!</string>
    <string name="about_active">Το patch είναι ενεργοποιημένο. Πρέπει να είστε προστατευμένοι από αυτά τα vulnerabilities.</string>
    <string name="about_notactive"><b>Σημείωση</b>: Το patch δεν είναι ενεργό! Επιβεβαιώστε ότι έχετε εγκατεστημένο το <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed framework</a>
και ότι έχετε ενεργοποιήσει αυτό το module.</string>
</resources>
