<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/about_author" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/about_noconfigs" />
        <TextView
            android:id="@+id/tvActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_active"
            android:textColor="#00C000" />
        <TextView
            android:id="@+id/tvNotActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_notactive"
            android:textColor="#C00000" />
    </LinearLayout>
</ScrollView>
